<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackback"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:fontFamily="@font/blinker_semibold"
        android:text="@string/mycurrency"
        android:textColor="#B2AFC1"
        android:textSize="40sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="394dp"
        android:layout_height="604dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:id="@+id/master_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="576dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/dropdown_menu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:id="@+id/layout_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/convert_from_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="@string/convert_from"
                        android:textColor="#A03535"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/convert_to_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="@string/convert_to"
                        android:textColor="#A03535"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingPrefix">

                    <TextView
                        android:id="@+id/convert_from_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1.0"
                        android:background="@android:drawable/editbox_background"
                        android:hint="@string/select_currency"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="14sp"
                        app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
                        app:drawableRightCompat="@drawable/ic_baseline_arrow_drop_down_24" />

                    <TextView
                        android:id="@+id/convert_to_dropdown_menu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1.0"
                        android:background="@android:drawable/editbox_background"
                        android:hint="@string/select_currency"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="14sp"
                        app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
                        app:drawableRightCompat="@drawable/ic_baseline_arrow_drop_down_24" />

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:id="@+id/layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1.0"
                    android:text="Date:"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/picked_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/pick_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:text="Pick Date"
                    app:cornerRadius="16dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/dropdown_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:id="@+id/linear_layout_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/view_amount_to_convert_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="@string/amount_to_convert"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/conversion_rate_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="@string/result"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_amount_to_convert_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1.0"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/default_value"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        tools:ignore="LabelFor,TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/conversion_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/conversion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/convert"
                    android:textColor="#F6F4F4"
                    app:backgroundTint="#27011C"
                    app:cornerRadius="16dp" />


                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/save_as_favorite"
                    android:textColor="#F6F3F3"
                    app:backgroundTint="#880000"
                    app:cornerRadius="16dp" />

                <Button
                    android:id="@+id/set_saved"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/set_favorite"
                    android:textColor="#F6F3F3"
                    app:backgroundTint="#880000"
                    app:cornerRadius="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/exit_button"
                    android:textColor="#F6F3F3"
                    app:backgroundTint="#0B0000"
                    app:cornerRadius="16dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
